<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/background_appointment"/>

    <TextView
        android:id="@+id/tvAppDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="5dp"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="20">

        <TextView
            android:id="@+id/tvAppTimeStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="19"
            android:padding="5dp"
            android:text="Time: 00:00"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnAddTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_time" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_customer"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="5dp"
        android:padding="5dp" />

    <Spinner
        android:id="@+id/spinnerCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/title_customer"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_service"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"
        android:padding="5dp" />

    <Spinner
        android:id="@+id/spinnerService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/title_service"
        android:layout_margin="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/price"
            android:inputType="number"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbAlreadyCompleted"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed"/>

</LinearLayout>