<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appointmentCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#C1C9F4"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivAppointmentIcon"
            android:layout_width="75dp"
            android:layout_height="73dp"
            android:layout_margin="8dp"
            android:background="@drawable/icon_calendar"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvCustomerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_customer"
            android:textColor="#000001"
            android:textSize="22sp"
            card_view:layout_constraintHorizontal_bias="0.045"
            card_view:layout_constraintLeft_toRightOf="@id/ivAppointmentIcon"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/ivAppointmentIcon" />

        <TextView
            android:id="@+id/tvService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_service"
            android:textSize="18sp"
            card_view:layout_constraintStart_toStartOf="@+id/tvCustomerName"
            card_view:layout_constraintTop_toBottomOf="@+id/tvCustomerName" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tvService"
            card_view:layout_constraintTop_toBottomOf="@+id/tvService"
            card_view:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/cbCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintLeft_toLeftOf="@id/tvPrice"
            card_view:layout_constraintTop_toBottomOf="@id/tvPrice"
            card_view:layout_constraintVertical_bias="0.111" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000001"
            android:textSize="18sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.953"
            card_view:layout_constraintStart_toEndOf="@+id/tvCustomerName"
            card_view:layout_constraintTop_toTopOf="@+id/tvCustomerName" />

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_start"
            android:textColor="#000001"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toTopOf="@+id/btnDelete"
            card_view:layout_constraintEnd_toEndOf="@+id/tvDate"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDate"
            card_view:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginBottom="10dp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/cbCompleted"
            card_view:layout_constraintEnd_toEndOf="@+id/tvDate"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toEndOf="@+id/cbCompleted" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>